styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root{
    --primary-color: #fdf9f7;
    --secondary-color: #0c0c0c;
}

.dark-theme{
    --primary-color: #0c0c0c;
    --secondary-color: #fdf9f7;
}

html{
    font-size: calc(100vw / 1920 * 10);
    scroll-behavior: smooth;
}

html, body{
    margin: 0;
    padding: 0;
    background: var(--primary-color);
    position: relative;
    color: var(--secondary-color);
}

.trail{
    @media (max-width: 768px) {
        display: none;
    }
}

.loader{
    width: 100vw;
    height: 100vh;
}

.loader-clip{
    position: absolute;
    width: 100vw;
    height: 33.3vh;
    overflow: clip;
    z-index: 10000;
}

.clip-top{
    top: 0;
    clip-path: inset(0 0 0 0);
    background: var(--secondary-color);
}

.clip-bottom{
    bottom: 0;
    clip-path: inset(0 0 0 0);
    background: var(--secondary-color);
}

.clip-center{
    overflow: hidden;
    position: relative;
    width: 100vw;
    height: 33.3vh;
    top: 33.3vh;
}

.marquee {
    position: absolute;
    top: 200%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 200vw;
    color: var(--primary-color);
    mix-blend-mode: difference;
    font-size: 12vw;
}

.clip-center .marquee{
    color: var(--secondary-color);
}

.marquee-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: "Courier Prime", monospace;
}

.container{
    position: relative;
    top: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    z-index: 1;
    font-family: "Neue Montreal", sans-serif;
    text-transform: uppercase;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    font-size: 14px;
}

.topbar{
    position: absolute;
    top: 0;

}

.container, .footer, .topbar{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 2em 4em;

    @media (max-width: 533px) {
        padding: 1em 2em;
    }
}



.footer{
    @media (max-width: 768px) {
        padding: 0;
    }
}

ul,li{
    padding: 0;
    list-style-type: none;
    display: flex;
}

.langs > li{
  border-right: 1px solid var(--secondary-color);
    padding-right: 10px;
    margin-right: 10px;

}

.langs > li:last-child{
    border-right: none;
}



/* cursor */

svg{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

path{
    fill: none;
    stroke-width: 50;
    stroke-linecap: round;
    stroke-linejoin: round;
}


/* navigation */

::placeholder {
    font-family: "Courier Prime", serif;
    font-weight: 400;
}

a{
    text-decoration: none;
    color: var(--primary-color);
}

i {
    color: var(--secondary-color);
}

input{
    font-family: "Courier Prime", serif;
    font-weight: 400;
    border: none;
    outline: none;
    background: var(--primary-color);
    padding: 0.25em 0.75em 0.3em 0.75em;
}

.submit-button{
    background: var(--primary-color);
    color: var(--secondary-color);
    height: 40px;

    @media (max-width: 768px) {
        height: 30px;
        font-size: 10px;
        width: 58px;
        padding: 0;
    }
}

.menu{
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    background: var(--secondary-color);
    clip-path: polygon(
        49.75% 49.75%,
        50.25% 49.75%,
        50.25% 49.75%,
        49.75% 50.25%
    );

    pointer-events: none;
    opacity: 0;
}

.logo{
    text-transform: uppercase;
    font-family: "Courier Prime", serif;
    font-size: 80px;
    color: var(--primary-color);

    @media (max-width: 400px) {
        font-size: 50px;
    }
}

.langs{
    z-index: 12;
}

.langs a{
    color: var(--secondary-color);
    display: block;
}

.close-btn{
    position: relative;
    top: -0.5em;
    width: 50px;
    height: 40px;
}

.close-btn:before{
    content: "";
    background: var(--primary-color);
    position: absolute;
    transform: rotate(-45deg);
    top: 0;
    left: 0;
    width: 30px;
    height: 2px;
}
.close-btn:after{
    content: "";
    top: 0;
    left: 0;
    transform: rotate(45deg);
    position: absolute;
    width: 30px;
    height: 2px;
    background: var(--primary-color);
}

.col{
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 1em;

    @media (max-width: 400px) {
        padding: 5px;
    }
}

.col-image{
    background: url("images/nav-img-dark.jpg") center center no-repeat;
    background-size: cover;

    @media (max-width: 781px) {
        display: none;
    }
}

.col-image.dark{

    background: url("images/nav-img.jpg") center center no-repeat;
    background-size: cover;
}


.col .logo, .col .tagline{
    flex: 2;
}

.col .tagline{
    display: flex;
    gap: 7em;
    padding: 1em 0;
}

button{
    background-color: var(--secondary-color);
    color: var(--primary-color);
    padding: 0.35em 0.75em 0.4em 0.75em;
    border: none;
    outline: none;
    clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 70%, 90% 100%, 30% 100%, 0 100%, 0% 100%);
    font-family: "Courier Prime", serif;
    font-weight: 400;
    line-height: 1;
    cursor: pointer;
    font-size: 14px;
    position: relative;
    z-index: 1000;
    transition: .2s all ease-in-out;
}

button:before{
    content: "";
    position: absolute;
    bottom: 0;
    right: 0;
    height: 5px;
    width: 5px;
    background-color: black;
}

.toggle,
.close-btn{
    cursor: pointer;
    position: fixed;
    top: 25px;
    right: 55px;
    /*right: 20px;*/
    z-index: 11;
    border: 1px solid black;

    @media (max-width: 533px) {
        top: 10px;
        right: 25px;
    }
}



.theme{
    margin: 0;
    z-index: 10;
    cursor: pointer;
    background-color: var(--secondary-color);
}

.white-bg{
    background-color: #fff;
    color: #000 !important;
    border: 1px solid black;
}

.opacity{
    opacity: 0;
}
/* ... */

